--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,10 @@
-name: Build
+name: Greet Everyone
 on: [push]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    name: Build on ${{ matrix.os }}
+    name: Greeting
+    runs-on: ubuntu-latest
     steps:
       - name: Say hello
-        run: echo 'hello'
+        run: echo 'hello world'
