--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Continous Integration Workflow
+name: Build
 on: [push]
 
 jobs:
@@ -9,19 +9,37 @@ jobs:
     runs-on: ${{ matrix.os }}
     name: Build on ${{ matrix.os }} with Node ${{ matrix.node }}
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout current commit/branch/tag
+        uses: actions/checkout@v1
+
+      - name: Setup Node 12.x
+        uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+
       - name: Show exact node version
         run: node --version
+
+      - name: Show exact yarn version
+        run: yarn --version
+
       - name: Install dependencies
         run: yarn install
+
       - name: Lint TypeScript files
         run: yarn lint
+
       - name: Run tests
         run: yarn test
+
       - name: Bundle files
         run: yarn bundle
         env:
           NODE_ENV: production
+
+      - name: Publish new release
+        if: startsWith(github.ref, 'refs/tags')
+        run: yarn package:publish
+        env:
+          CI: true
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
