--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "ts-loader": "^8.0.6",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3",
+    "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
-  },
-  "dependencies": {
-    "vue": "^2.6.12"
   }
 }
