--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "css-loader": "^5.0.0",
     "electron": "^10.1.4",
     "electron-builder": "^22.9.1",
+    "eslint": "^7.12.1",
     "file-loader": "^6.1.1",
     "jest": "^26.6.0",
+    "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.6",
-    "tslint": "^6.1.3",
     "typescript": "^4.0.3",
+    "vue-eslint-parser": "^7.1.1",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
