--- a/package.json
+++ b/package.json
@@ -28,25 +28,26 @@
         "package:publish": "yarn package --publish always"
     },
     "devDependencies": {
-        "@types/jest": "^26.0.15",
-        "@typescript-eslint/eslint-plugin": "^4.6.0",
-        "@typescript-eslint/parser": "^4.6.0",
-        "css-loader": "^5.0.1",
-        "electron": "^10.1.5",
-        "electron-builder": "^22.9.1",
-        "eslint": "^7.13.0",
+        "@types/jest": "^26.0.22",
+        "@types/node": "^14.14.37",
+        "@typescript-eslint/eslint-plugin": "^4.20.0",
+        "@typescript-eslint/parser": "^4.20.0",
+        "css-loader": "^5.2.0",
+        "electron": "^12.0.2",
+        "electron-builder": "^22.10.5",
+        "eslint": "^7.23.0",
         "file-loader": "^6.2.0",
         "jest": "^26.6.3",
-        "prettier": "^2.1.2",
+        "prettier": "^2.2.1",
         "style-loader": "^2.0.0",
-        "ts-jest": "^26.4.3",
-        "ts-loader": "^8.0.10",
-        "typescript": "^4.0.5",
+        "ts-jest": "^26.5.4",
+        "ts-loader": "^8.1.0",
+        "typescript": "^4.2.3",
         "vue": "^2.6.12",
-        "vue-eslint-parser": "^7.1.1",
-        "vue-loader": "^15.9.5",
+        "vue-eslint-parser": "^7.6.0",
+        "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.12",
-        "webpack": "^5.4.0",
-        "webpack-cli": "^4.2.0"
+        "webpack": "^5.30.0",
+        "webpack-cli": "^4.6.0"
     }
 }
