--- a/electron-builder-config.yml
+++ b/electron-builder-config.yml
@@ -7,6 +7,7 @@ files:
     - views/**/*.html
 
 win:
+    icon: build/app-icon.ico
     publish:
         - github
     target:
@@ -19,6 +20,11 @@ win:
               - x64
               - ia32
 
+nsis:
+    oneClick: false
+    allowToChangeInstallationDirectory: true
+    deleteAppDataOnUninstall: true
+
 mac:
     category: public.app-category.utilities
     publish:
@@ -28,6 +34,7 @@ mac:
         - zip
 
 linux:
+    icon: build/app-icon.png
     publish:
         - github
     target:
