Upgraded dependencies and use node version 16

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,9 @@ jobs:
         strategy:
             matrix:
                 os: [macos-latest, windows-latest, ubuntu-latest]
-                node_version: ["14.x"]
 
         runs-on: ${{ matrix.os }}
-        name: Build on ${{ matrix.os }} with Node ${{ matrix.node_version }}
+        name: Build on ${{ matrix.os }}
         steps:
             - name: Checkout current commit/branch/tag
               uses: actions/checkout@v1
@@ -17,7 +16,7 @@ jobs:
             - name: Setup Node ${{ matrix.node_version }}
               uses: actions/setup-node@v1
               with:
-                  node-version: ${{ matrix.node_version }}
+                  node-version: 16
 
             - name: Show exact node version
               run: node --version
