--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     ],
     "main": "./bundle/main.js",
     "scripts": {
-        "lint": "./node_modules/.bin/eslint \"src/**/*{ts,vue}\"",
+        "lint": "./node_modules/.bin/eslint src --ext .ts,.vue",
         "test": "./node_modules/.bin/jest --config jest.json --silent .",
         "bundle": "./node_modules/.bin/webpack",
         "start": "./node_modules/.bin/electron .",
@@ -28,25 +28,25 @@
         "package:publish": "yarn package --publish always"
     },
     "devDependencies": {
-        "@types/jest": "^27.5.1",
-        "@types/node": "^17.0.34",
-        "@typescript-eslint/eslint-plugin": "^5.25.0",
-        "@typescript-eslint/parser": "^5.25.0",
+        "@types/jest": "^28.1.1",
+        "@types/node": "^17.0.40",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
         "css-loader": "^6.7.1",
-        "electron": "^19.0.1",
+        "electron": "^19.0.3",
         "electron-builder": "^23.0.4",
-        "eslint": "^8.15.0",
+        "eslint": "^8.17.0",
         "file-loader": "^6.2.0",
         "jest": "^28.1.0",
         "prettier": "^2.6.2",
         "style-loader": "^3.3.1",
-        "ts-jest": "^28.0.2",
+        "ts-jest": "^28.0.4",
         "ts-loader": "^9.3.0",
-        "typescript": "^4.6.4",
-        "vue": "^3.2.33",
+        "typescript": "^4.7.3",
+        "vue": "^3.2.36",
         "vue-eslint-parser": "^9.0.2",
         "vue-loader": "^17.0.0",
-        "webpack": "^5.72.1",
+        "webpack": "^5.73.0",
         "webpack-cli": "^4.9.2"
     }
 }
